rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-svc
  labels:
    app: rest
spec:
  selector:
    app: rest
  ports:
  - name: rest
    port: 5000
    targetPort: 5000
